; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r600_dpm.c_r600_engine_clock_entry_set_reference_divider.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r600_dpm.c_r600_engine_clock_entry_set_reference_divider.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@SCLK_FREQ_SETTING_STEP_0_PART1 = common dso_local global i64 0, align 8
@STEP_0_SPLL_REF_DIV_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @r600_engine_clock_entry_set_reference_divider(%struct.radeon_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.radeon_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* @SCLK_FREQ_SETTING_STEP_0_PART1, align 8
  %8 = load i32, i32* %5, align 4
  %9 = mul nsw i32 %8, 4
  %10 = mul nsw i32 %9, 2
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %7, %11
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @STEP_0_SPLL_REF_DIV(i32 %13)
  %15 = load i32, i32* @STEP_0_SPLL_REF_DIV_MASK, align 4
  %16 = xor i32 %15, -1
  %17 = call i32 @WREG32_P(i64 %12, i32 %14, i32 %16)
  ret void
}

declare dso_local i32 @WREG32_P(i64, i32, i32) #1

declare dso_local i32 @STEP_0_SPLL_REF_DIV(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
